<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoticeActivity"
    android:background="#ccffcd"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="40dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_notice"
                android:textSize="25sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                />


            <EditText
                android:id="@+id/notice_title"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:singleLine="true"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textSize="15sp"
                android:maxLength="35"
                />


            <EditText
                android:id="@+id/notice_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/body"
                android:inputType="textCapSentences|textMultiLine"
                android:singleLine="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:maxLength="2000"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textSize="15sp"
                android:text="@string/category"
                />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"

                >

                <RadioButton
                    android:id="@+id/president"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/general"
                    android:onClick="checkButton"
                    />

                <RadioButton
                    android:id="@+id/academic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/academic"
                    android:onClick="checkButton"

                    />

                <RadioButton
                    android:id="@+id/welfare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/welfare"
                    android:onClick="checkButton"
                    />


                <RadioButton
                    android:id="@+id/sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sports"
                    android:onClick="checkButton"
                    />
                <RadioButton
                    android:id="@+id/religious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/religious"
                    android:onClick="checkButton"
                    />
                <RadioButton
                    android:id="@+id/food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/food"
                    android:onClick="checkButton"
                    />
                <RadioButton
                    android:id="@+id/special"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/special_task"
                    android:onClick="checkButton"
                    />

            </RadioGroup>







            <Button
                android:id="@+id/notice_submit"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/roundedbutton"
                android:textColor="@color/colorWhite"
                android:layout_marginRight="70dp"
                android:layout_marginLeft="70dp"
                android:layout_marginBottom="15dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>