<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#f1f1f1"
    >

    <!--Account Logo-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/welcome_to"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:textColor="#696969"
        />

    <!--Login Button-->

    <TextView
        android:id="@+id/messagehello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/colorBlack"
        android:text="@string/login_or_sign_up_to_continue"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        />


    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="190dp"
        android:background="@drawable/white_button"
        android:textColor="@color/colorWhite"
        android:padding="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />

    <Button
        android:id="@+id/login_btn"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/login"
        android:padding="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />

    <!--Register Button-->



</LinearLayout>