<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:orientation="vertical"
    android:background="#f1f1f1"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/colorBlack"
        />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
             />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="200dp"
        android:elevation="0dp"
        >

        <ImageView
            android:id="@+id/reg_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_profilepic"
            android:scaleType="centerCrop"

            />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >

        <ImageView
            android:layout_marginLeft="39dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/pearson"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/enter_your_full_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/grouppeople"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            />



        <EditText
            android:id="@+id/batch"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/batch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/hashingtag"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            />

        <EditText
            android:id="@+id/reg_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/enter_your_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/mayl"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/lowk"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >


        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/lockfilled"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            />

        <EditText
            android:id="@+id/reg_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            />


    </LinearLayout>


        <Button
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style = '@style/Widget.AppCompat.Button.Colored'
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/white_button"

            />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/already_have_an_account_login"
        android:textColor="#0091fe"

        />



</LinearLayout>